
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* FILENAME ;
 char* MAP_FAILED ;
 int MAP_SHARED ;
 int O_CREAT ;
 int O_DIRECT ;
 int O_LARGEFILE ;
 int O_RDWR ;
 int PROT_READ ;
 int PROT_WRITE ;
 scalar_t__ fork () ;
 int ftruncate64 (int,unsigned long long) ;
 char* mmap64 (int *,int,int,int ,int,unsigned long long) ;
 int open (char*,int,int) ;
 int perror (char*) ;
 int printf (char*,int,char*) ;
 int pwrite64 (int,char*,int,unsigned long long) ;

int main(int argc, char **argv)
{
 int fd, fd1, ret;
 char *buf;
 char wbuf[8192];
 unsigned long long offset = 0xffffff000ULL;
 char *p=wbuf;

 fd = open(FILENAME, O_RDWR|O_CREAT|O_LARGEFILE , 0644);
 if (fd < 0) {
  perror(FILENAME);
  return -1;
 }

 ftruncate64(fd, offset + 4096*4);
 buf = mmap64(((void*)0), 4096*4, PROT_READ|PROT_WRITE, MAP_SHARED, fd, offset);
 if (buf == MAP_FAILED) {
  perror("mmap");
  return -1;
 }

 fd1 = open(FILENAME, O_RDWR|O_DIRECT|O_LARGEFILE, 0644);
 if (fd < 0) {
  perror(FILENAME);
  return -1;
 }

 p = (char *)((unsigned long) p | 4095)+1;


 if (fork()) {
  while(1) {

   buf[10] = 1;
  }
 } else {
  ret = pwrite64(fd1, p, 4096, offset);
  if (ret < 4096) {
   printf("write: %d %p\n", ret, p);
   perror("write");
   return -1;
  }
 }

 return 0;
}
